[tool.poetry]
name = "agentdoc"
version = "0.1.0"
description = ""
authors = ["Petru Babalau <petrubabalau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
flask = "^3.0.3"
dependency-injector = "^4.42.0"
pytest = "^8.3.3"
langchain-openai = "^0.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
